<resources>
    <string name="app_name">Android Note</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="note">Note</string>
    <string name="add_your_note_here">Add your note here...</string>
</resources>